objectbox/lib/src/bindings/objectbox-c.dart


  /// /// An optimized version of obx_cursor_put() if you can ensure that the given ID is not used yet.
  /// /// Typically used right after getting a new ID via obx_cursor_id_for_put().
  /// /// WARNING: using this incorrectly (an object with the given ID already exists) may result in inconsistent data
  /// /// (e.g. indexes do not get updated).
  /// /// @param id non-zero
  int cursor_put_new(
    ffi.Pointer<OBX_cursor> cursor,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _cursor_put_new ??=
        _dylib.lookupFunction<_c_cursor_put_new, _dart_cursor_put_new>(
            'obx_cursor_put_new');
    return _cursor_put_new(
      cursor,
      id,
      data,
      size,
    );
  }

  _dart_cursor_put_new _cursor_put_new;

  /// /// Convenience for obx_cursor_put4() with OBXPutMode_INSERT.
  /// /// @param id non-zero
  /// /// @returns OBX_ERROR_ID_ALREADY_EXISTS if an insert fails because of a colliding ID
  int cursor_insert(
    ffi.Pointer<OBX_cursor> cursor,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _cursor_insert ??=
        _dylib.lookupFunction<_c_cursor_insert, _dart_cursor_insert>(
            'obx_cursor_insert');
    return _cursor_insert(
      cursor,
      id,
      data,
      size,
    );
  }

  _dart_cursor_insert _cursor_insert;

  /// /// Convenience for obx_cursor_put4() with OBXPutMode_UPDATE.
  /// /// @param id non-zero
  /// /// @returns OBX_ERROR_ID_NOT_FOUND  if an update fails because the given ID does not represent any object
  int cursor_update(
    ffi.Pointer<OBX_cursor> cursor,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _cursor_update ??=
        _dylib.lookupFunction<_c_cursor_update, _dart_cursor_update>(
            'obx_cursor_update');
    return _cursor_update(
      cursor,
      id,
      data,
      size,
    );
  }

  _dart_cursor_update _cursor_update;

  /// /// FB ID slot must be present; new entities must prepare the slot using the special value OBX_ID_NEW.
  /// /// Alternatively, you may also pass 0 to indicate a new entity if you are aware that FlatBuffers builders typically
  /// /// skip zero values by default. Thus, you have to "force" writing the zero in FlatBuffers.
  /// /// @param data object data, non-const because the ID slot will be written (mutated) for new entites (see above)
  /// /// @returns id if the object could be put, or 0 in case of an error
  int cursor_put_object(
    ffi.Pointer<OBX_cursor> cursor,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _cursor_put_object ??=
        _dylib.lookupFunction<_c_cursor_put_object, _dart_cursor_put_object>(
            'obx_cursor_put_object');
    return _cursor_put_object(
      cursor,
      data,
      size,
    );
  }

  _dart_cursor_put_object _cursor_put_object;

  /// /// @overload obx_id obx_cursor_put_object(OBX_cursor* cursor, void* data, size_t size)
  int cursor_put_object4(
    ffi.Pointer<OBX_cursor> cursor,
    ffi.Pointer<ffi.Void> data,
    int size,
    int mode,
  ) {
    _cursor_put_object4 ??=
        _dylib.lookupFunction<_c_cursor_put_object4, _dart_cursor_put_object4>(
            'obx_cursor_put_object4');
    return _cursor_put_object4(
      cursor,
      data,
      size,
      mode,
    );
  }

  _dart_cursor_put_object4 _cursor_put_object4;

  int cursor_get(
    ffi.Pointer<OBX_cursor> cursor,
    int id,
    ffi.Pointer<ffi.Pointer<ffi.Void>> data,
    ffi.Pointer<ffi.IntPtr> size,
  ) {
    _cursor_get ??= _dylib
        .lookupFunction<_c_cursor_get, _dart_cursor_get>('obx_cursor_get');
    return _cursor_get(
      cursor,
      id,
      data,
      size,
    );
  }

  _dart_cursor_get _cursor_get;

  /// /// Get all objects as bytes.
  /// /// For larger quantities, it's recommended to iterate using obx_cursor_first and obx_cursor_next.
  /// /// However, if the calling overhead is high (e.g., for language bindings), this method helps.
  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details
  ffi.Pointer<OBX_bytes_array> cursor_get_all(
    ffi.Pointer<OBX_cursor> cursor,
  ) {
    _cursor_get_all ??=
        _dylib.lookupFunction<_c_cursor_get_all, _dart_cursor_get_all>(
            'obx_cursor_get_all');
    return _cursor_get_all(
      cursor,
    );
  }

  _dart_cursor_get_all _cursor_get_all;

  int cursor_first(
    ffi.Pointer<OBX_cursor> cursor,
    ffi.Pointer<ffi.Pointer<ffi.Void>> data,
    ffi.Pointer<ffi.IntPtr> size,
  ) {
    _cursor_first ??=
        _dylib.lookupFunction<_c_cursor_first, _dart_cursor_first>(
            'obx_cursor_first');
    return _cursor_first(
      cursor,
      data,
      size,
    );
  }

  _dart_cursor_first _cursor_first;

  int cursor_next(
    ffi.Pointer<OBX_cursor> cursor,
    ffi.Pointer<ffi.Pointer<ffi.Void>> data,
    ffi.Pointer<ffi.IntPtr> size,
  ) {
    _cursor_next ??= _dylib
        .lookupFunction<_c_cursor_next, _dart_cursor_next>('obx_cursor_next');
    return _cursor_next(
      cursor,
      data,
      size,
    );
  }

  _dart_cursor_next _cursor_next;

  int cursor_seek(
    ffi.Pointer<OBX_cursor> cursor,
    int id,
  ) {
    _cursor_seek ??= _dylib
        .lookupFunction<_c_cursor_seek, _dart_cursor_seek>('obx_cursor_seek');
    return _cursor_seek(
      cursor,
      id,
    );
  }

  _dart_cursor_seek _cursor_seek;

  int cursor_current(
    ffi.Pointer<OBX_cursor> cursor,
    ffi.Pointer<ffi.Pointer<ffi.Void>> data,
    ffi.Pointer<ffi.IntPtr> size,
  ) {
    _cursor_current ??=
        _dylib.lookupFunction<_c_cursor_current, _dart_cursor_current>(
            'obx_cursor_current');
    return _cursor_current(
      cursor,
      data,
      size,
    );
  }

  _dart_cursor_current _cursor_current;

  int cursor_remove(
    ffi.Pointer<OBX_cursor> cursor,
    int id,
  ) {
    _cursor_remove ??=
        _dylib.lookupFunction<_c_cursor_remove, _dart_cursor_remove>(
            'obx_cursor_remove');
    return _cursor_remove(
      cursor,
      id,
    );
  }

  _dart_cursor_remove _cursor_remove;

  int cursor_remove_all(
    ffi.Pointer<OBX_cursor> cursor,
  ) {
    _cursor_remove_all ??=
        _dylib.lookupFunction<_c_cursor_remove_all, _dart_cursor_remove_all>(
            'obx_cursor_remove_all');
    return _cursor_remove_all(
      cursor,
    );
  }

  _dart_cursor_remove_all _cursor_remove_all;

  /// /// Count the number of available objects
  int cursor_count(
    ffi.Pointer<OBX_cursor> cursor,
    ffi.Pointer<ffi.Uint64> count,
  ) {
    _cursor_count ??=
        _dylib.lookupFunction<_c_cursor_count, _dart_cursor_count>(
            'obx_cursor_count');
    return _cursor_count(
      cursor,
      count,
    );
  }

  _dart_cursor_count _cursor_count;

  /// /// Count the number of available objects up to the specified maximum
  int cursor_count_max(
    ffi.Pointer<OBX_cursor> cursor,
    int max_count,
    ffi.Pointer<ffi.Uint64> out_count,
  ) {
    _cursor_count_max ??=
        _dylib.lookupFunction<_c_cursor_count_max, _dart_cursor_count_max>(
            'obx_cursor_count_max');
    return _cursor_count_max(
      cursor,
      max_count,
      out_count,
    );
  }

  _dart_cursor_count_max _cursor_count_max;

  /// /// Return true if there is no object available (false if at least one object is available)
  int cursor_is_empty(
    ffi.Pointer<OBX_cursor> cursor,
    ffi.Pointer<ffi.Uint8> out_is_empty,
  ) {
    _cursor_is_empty ??=
        _dylib.lookupFunction<_c_cursor_is_empty, _dart_cursor_is_empty>(
            'obx_cursor_is_empty');
    return _cursor_is_empty(
      cursor,
      out_is_empty,
    );
  }

  _dart_cursor_is_empty _cursor_is_empty;

  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details
  ffi.Pointer<OBX_bytes_array> cursor_backlinks(
    ffi.Pointer<OBX_cursor> cursor,
    int entity_id,
    int property_id,
    int id,
  ) {
    _cursor_backlinks ??=
        _dylib.lookupFunction<_c_cursor_backlinks, _dart_cursor_backlinks>(
            'obx_cursor_backlinks');
    return _cursor_backlinks(
      cursor,
      entity_id,
      property_id,
      id,
    );
  }

  _dart_cursor_backlinks _cursor_backlinks;

  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details
  ffi.Pointer<OBX_id_array> cursor_backlink_ids(
    ffi.Pointer<OBX_cursor> cursor,
    int entity_id,
    int property_id,
    int id,
  ) {
    _cursor_backlink_ids ??= _dylib.lookupFunction<_c_cursor_backlink_ids,
        _dart_cursor_backlink_ids>('obx_cursor_backlink_ids');
    return _cursor_backlink_ids(
      cursor,
      entity_id,
      property_id,
      id,
    );
  }

  _dart_cursor_backlink_ids _cursor_backlink_ids;

  int cursor_rel_put(
    ffi.Pointer<OBX_cursor> cursor,
    int relation_id,
    int source_id,
    int target_id,
  ) {
    _cursor_rel_put ??=
        _dylib.lookupFunction<_c_cursor_rel_put, _dart_cursor_rel_put>(
            'obx_cursor_rel_put');
    return _cursor_rel_put(
      cursor,
      relation_id,
      source_id,
      target_id,
    );
  }

  _dart_cursor_rel_put _cursor_rel_put;

  int cursor_rel_remove(
    ffi.Pointer<OBX_cursor> cursor,
    int relation_id,
    int source_id,
    int target_id,
  ) {
    _cursor_rel_remove ??=
        _dylib.lookupFunction<_c_cursor_rel_remove, _dart_cursor_rel_remove>(
            'obx_cursor_rel_remove');
    return _cursor_rel_remove(
      cursor,
      relation_id,
      source_id,
      target_id,
    );
  }

  _dart_cursor_rel_remove _cursor_rel_remove;

  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details
  ffi.Pointer<OBX_id_array> cursor_rel_ids(
    ffi.Pointer<OBX_cursor> cursor,
    int relation_id,
    int source_id,
  ) {
    _cursor_rel_ids ??=
        _dylib.lookupFunction<_c_cursor_rel_ids, _dart_cursor_rel_ids>(
            'obx_cursor_rel_ids');
    return _cursor_rel_ids(
      cursor,
      relation_id,
      source_id,
    );
  }

  _dart_cursor_rel_ids _cursor_rel_ids;

  /// /// Time series: get the limits (min/max time values) over all objects
  /// /// @param out_min_id pointer to receive an output (may be NULL)
  /// /// @param out_min_value pointer to receive an output (may be NULL)
  /// /// @param out_max_id pointer to receive an output (may be NULL)
  /// /// @param out_max_value pointer to receive an output (may be NULL)
  /// /// @returns OBX_NOT_FOUND if no objects are stored
  int cursor_ts_min_max(
    ffi.Pointer<OBX_cursor> cursor,
    ffi.Pointer<ffi.Uint64> out_min_id,
    ffi.Pointer<ffi.Int64> out_min_value,
    ffi.Pointer<ffi.Uint64> out_max_id,
    ffi.Pointer<ffi.Int64> out_max_value,
  ) {
    _cursor_ts_min_max ??=
        _dylib.lookupFunction<_c_cursor_ts_min_max, _dart_cursor_ts_min_max>(
            'obx_cursor_ts_min_max');
    return _cursor_ts_min_max(
      cursor,
      out_min_id,
      out_min_value,
      out_max_id,
      out_max_value,
    );
  }

  _dart_cursor_ts_min_max _cursor_ts_min_max;
